# pytenet

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.rst  ReadMe.md  ReadMe.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: .gitignore  api.rst  basics.ipynb  conf.py  dmrg.ipynb  hamiltonian_mpo.ipynb  index.rst  requirements.txt
docs/: basics.ipynb
experiments/: evolution.py  evolution_convergence.py  evolution_density_matrix.py  evolution_operator.py  metts_ising.py  tangent_space.py  tangent_space_dim.py  time_evolution.py
paper/: paper.bib  paper.md
pytenet/: __init__.py  autop.py  bipartite_graph.py  block_sparse_util.py  bond_ops.py  chain_ops.py  compression.py  dmrg.py  evolution.py  hamiltonian.py  hamiltonian_bose_hubbard.py  hamiltonian_fermi_hubbard.py  hamiltonian_heisenberg.py  hamiltonian_ising.py  hamiltonian_linear_fermionic.py  hamiltonian_molecular.py  hamiltonian_quadratic_fermionic.py  hamiltonian_spin_molecular.py  hamiltonian_util.py  hopcroft_karp.py  imps.py  krylov.py  minimization.py  mpo.py  mps.py  opchain.py  operation.py  opgraph.py  optree.py  qnumber.py  tdvp.py  thc.py  util.py
pytenet/hamiltonian/: bose_hubbard.py  diagonal_molecular.py  diagonal_spin_molecular.py  fermi_hubbard.py  heisenberg.py  ising.py  linear_fermionic.py  local_opchain.py  molecular.py  quadratic_fermionic.py  spin_molecular.py
test/: mps_test.py  test_bipartite_graph.py  test_block_sparse_util.py  test_bond_ops.py  test_chain_ops.py  test_compression.py  test_dmrg.py  test_evolution.py  test_hamiltonian.py  test_hamiltonian_bose_hubbard.npz  test_hamiltonian_fermi_hubbard.npz  test_hamiltonian_heisenberg_xxz.npz  test_hamiltonian_ising.npz  test_hamiltonian_linear_fermionic.py  test_hamiltonian_spin_molecular.py  test_hopcroft_karp.py  test_imps.py  test_krylov.py  test_minimization.py  test_mpo.py  test_mps.py  test_opchain.py  test_operation.py  test_opgraph.py  test_optree.py  test_tdvp.py  test_thc.py
(+11 files in other folders)
