[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytenet"
version = "1.2.0"
description = "Tensor network library for quantum simulations"
readme = "README.rst"
authors = [{ name = "Christian B. Mendl", email = "christian.b.mendl@gmail.com" }]
license = { text = "BSD-2-Clause" }
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "sphinx>=5.0.0",
    "ipython",
    "nbsphinx",
]

[project.urls]
homepage = "https://github.com/cmendl/pytenet"
repository = "https://github.com/cmendl/pytenet"
issues = "https://github.com/cmendl/pytenet/issues"
